@startuml class_diagram
!theme plain
skinparam backgroundColor white
skinparam defaultFontName Arial

title Діаграма класів JiraLite Domain Model

package "Domain Model" {
  
  class User {
    - Long id
    - String username
    - String email
    - String fullName
    - Role role
    - String passwordHash
    - LocalDateTime lastLoginDate
    - LocalDateTime createdAt
    - LocalDateTime updatedAt
    + authenticate(password)
    + updateLastLogin()
    + isActiveInLastDays(days)
    + hasPermission(permission)
  }
  
  class Project {
    - Long id
    - String name
    - String description
    - String key
    - User lead
    - Set<User> members
    - Set<Board> boards
    - LocalDateTime createdAt
    + addMember(user)
    + removeMember(user)
    + addBoard(board)
  }
  
  class Board {
    - Long id
    - String name
    - Project project
    - List<Issue> issues
    - LocalDateTime createdAt
    + addIssue(issue)
    + removeIssue(issue)
  }
  
  class Issue {
    - Long id
    - String title
    - String description
    - Priority priority
    - Status status
    - User assignee
    - User reporter
    - Project project
    - LocalDateTime createdAt
    - LocalDateTime updatedAt
    + changeStatus(status)
    + assign(user)
    + addComment(comment)
  }
  
  class Comment {
    - Long id
    - String content
    - User author
    - Issue issue
    - LocalDateTime createdAt
  }
  
  enum Priority {
    HIGHEST
    HIGH
    MEDIUM
    LOW
    LOWEST
  }
  
  enum Status {
    TO_DO
    IN_PROGRESS
    DONE
  }
  
  enum Role {
    ADMIN
    USER
    GUEST
  }
}

' Relationships
User ||--o{ Project : leads
User }o--o{ Project : member_of
Project ||--o{ Board : contains
Board ||--o{ Issue : has
Issue }o--|| User : assigned_to
Issue }o--|| User : reported_by
Issue ||--o{ Comment : has
Comment }o--|| User : authored_by
Issue }o--|| Priority : has
Issue }o--|| Status : has
User }o--|| Role : has

@enduml 